--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "enquirer": "^2.4.1"
+    "enquirer": "^2.4.1",
+    "simple-node-logger": "^21.8.12"
   }
 }
