--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ lerna-debug.log*
 .pnpm-debug.log*
 /Cloned Workspaces
 /src/config.ts
+/Json Copy
+firebase.ts
+map.json
+test.json
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
