--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "enquirer": "^2.4.1",
+    "firebase-admin": "^12.0.0",
     "simple-node-logger": "^21.8.12"
   }
 }
